# matmul_optim

./: 01_sumMatrix.cu  02_gemm.cu  03_gemm_register_ori.cu  03_gemm_register_v1.cu  CMakeLists.txt  README.md  common.h
